test/Fail/PruneBadRigidDef.err
PruneBadRigidDef.agda:12.47-48: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  PruneBadRigidDef.agda:12.47-48
